Adding groups endpoints for administration (#132)
* Adding groups endpoints for administration

* Fixing the pipeline
